// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions should render actions 1`] = `
<ButtonGroup
  block={false}
  bsClass="btn-group"
  className="tc-actions"
  justified={false}
  vertical={false}
>
  <Action
    bsStyle="primary"
    hideLabel={false}
    icon="fa fa-asterisk"
    label="Preparations"
    link={false}
    onClick={[Function]}
    tooltipPlacement={undefined}
  />
  <Action
    hideLabel={false}
    icon="fa fa-file-excel-o"
    label="Datasets"
    link={false}
    onClick={[Function]}
    tooltipPlacement={undefined}
  />
  <Action
    hideLabel={false}
    icon="fa fa-star"
    label="Favorites"
    link={false}
    onClick={[Function]}
    tooltipPlacement={undefined}
  />
  <Action
    displayMode="dropdown"
    hideLabel={false}
    icon="fa fa-file-excel-o"
    id="dropdown-id"
    items={
      Array [
        Object {
          "label": "document 1",
          "onClick": [Function],
        },
        Object {
          "label": "document 2",
          "onClick": [Function],
        },
      ]
    }
    label="related items"
    link={false}
    tooltipPlacement={undefined}
  />
  <Action
    displayMode="splitDropdown"
    hideLabel={false}
    id="split-dropdown-id"
    items={
      Array [
        Object {
          "label": "file 1",
          "onClick": [Function],
        },
        Object {
          "label": "file 2",
          "onClick": [Function],
        },
      ]
    }
    label="add file"
    link={false}
    onClick={[Function]}
    tooltipPlacement={undefined}
  />
</ButtonGroup>
`;

exports[`Actions should render actions with "link" theme 1`] = `
<ButtonGroup
  block={false}
  bsClass="btn-group"
  className="tc-actions"
  justified={false}
  vertical={false}
>
  <Action
    bsStyle="primary"
    hideLabel={false}
    icon="fa fa-asterisk"
    label="Preparations"
    link={true}
    onClick={[Function]}
    tooltipPlacement={undefined}
  />
  <Action
    hideLabel={false}
    icon="fa fa-file-excel-o"
    label="Datasets"
    link={true}
    onClick={[Function]}
    tooltipPlacement={undefined}
  />
  <Action
    hideLabel={false}
    icon="fa fa-star"
    label="Favorites"
    link={true}
    onClick={[Function]}
    tooltipPlacement={undefined}
  />
  <Action
    displayMode="dropdown"
    hideLabel={false}
    icon="fa fa-file-excel-o"
    id="dropdown-id"
    items={
      Array [
        Object {
          "label": "document 1",
          "onClick": [Function],
        },
        Object {
          "label": "document 2",
          "onClick": [Function],
        },
      ]
    }
    label="related items"
    link={true}
    tooltipPlacement={undefined}
  />
  <Action
    displayMode="splitDropdown"
    hideLabel={false}
    id="split-dropdown-id"
    items={
      Array [
        Object {
          "label": "file 1",
          "onClick": [Function],
        },
        Object {
          "label": "file 2",
          "onClick": [Function],
        },
      ]
    }
    label="add file"
    link={true}
    onClick={[Function]}
    tooltipPlacement={undefined}
  />
</ButtonGroup>
`;

exports[`Actions should render actions with defined tooltip placement 1`] = `
<ButtonGroup
  block={false}
  bsClass="btn-group"
  className="tc-actions"
  justified={false}
  vertical={false}
>
  <Action
    bsStyle="primary"
    hideLabel={true}
    icon="fa fa-asterisk"
    label="Preparations"
    link={true}
    onClick={[Function]}
    tooltipPlacement="right"
  />
  <Action
    hideLabel={true}
    icon="fa fa-file-excel-o"
    label="Datasets"
    link={true}
    onClick={[Function]}
    tooltipPlacement="right"
  />
  <Action
    hideLabel={true}
    icon="fa fa-star"
    label="Favorites"
    link={true}
    onClick={[Function]}
    tooltipPlacement="right"
  />
  <Action
    displayMode="dropdown"
    hideLabel={true}
    icon="fa fa-file-excel-o"
    id="dropdown-id"
    items={
      Array [
        Object {
          "label": "document 1",
          "onClick": [Function],
        },
        Object {
          "label": "document 2",
          "onClick": [Function],
        },
      ]
    }
    label="related items"
    link={true}
    tooltipPlacement="right"
  />
  <Action
    displayMode="splitDropdown"
    hideLabel={true}
    id="split-dropdown-id"
    items={
      Array [
        Object {
          "label": "file 1",
          "onClick": [Function],
        },
        Object {
          "label": "file 2",
          "onClick": [Function],
        },
      ]
    }
    label="add file"
    link={true}
    onClick={[Function]}
    tooltipPlacement="right"
  />
</ButtonGroup>
`;

exports[`Actions should render actions with hidden labels and tooltips 1`] = `
<ButtonGroup
  block={false}
  bsClass="btn-group"
  className="tc-actions"
  justified={false}
  vertical={false}
>
  <Action
    bsStyle="primary"
    hideLabel={true}
    icon="fa fa-asterisk"
    label="Preparations"
    link={false}
    onClick={[Function]}
    tooltipPlacement={undefined}
  />
  <Action
    hideLabel={true}
    icon="fa fa-file-excel-o"
    label="Datasets"
    link={false}
    onClick={[Function]}
    tooltipPlacement={undefined}
  />
  <Action
    hideLabel={true}
    icon="fa fa-star"
    label="Favorites"
    link={false}
    onClick={[Function]}
    tooltipPlacement={undefined}
  />
  <Action
    displayMode="dropdown"
    hideLabel={true}
    icon="fa fa-file-excel-o"
    id="dropdown-id"
    items={
      Array [
        Object {
          "label": "document 1",
          "onClick": [Function],
        },
        Object {
          "label": "document 2",
          "onClick": [Function],
        },
      ]
    }
    label="related items"
    link={false}
    tooltipPlacement={undefined}
  />
  <Action
    displayMode="splitDropdown"
    hideLabel={true}
    id="split-dropdown-id"
    items={
      Array [
        Object {
          "label": "file 1",
          "onClick": [Function],
        },
        Object {
          "label": "file 2",
          "onClick": [Function],
        },
      ]
    }
    label="add file"
    link={false}
    onClick={[Function]}
    tooltipPlacement={undefined}
  />
</ButtonGroup>
`;
